examples/issues/issue_1381/expected/admissionregistration.k8s.io_v1beta1_validatingwebhookconfiguration_validatingwebhook-orgname.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  name: validatingwebhook-orgname
