examples/issues/issue_1381/expected/rbac.authorization.k8s.io_v1_clusterrole_orgname.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: orgname
rules:
  resourceNames:
  - storageclass-orgname
  resources:
  - persistentvolumes
